[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-support-triage"
version = "1.0.0"
description = "Customer Support Ticket Triage OpenEnv representation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.1",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "httpx>=0.24.0"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
